--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "28.0.1"
+    buildToolsVersion '28.0.1'
     defaultConfig {
         applicationId "minhaturma.ufrpe.br.minhaturma"
         minSdkVersion 15
