--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,4 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+ // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
     repositories {
@@ -7,9 +7,12 @@ buildscript {
             url 'https://maven.google.com/'
             name 'Google'
         }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:3.3.1'
+
+        classpath 'com.google.gms:google-services:4.0.1' // google-services plugin
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -23,6 +26,8 @@ allprojects {
             url 'https://maven.google.com/'
             name 'Google'
         }
+
+        google() // Google's Maven repository
     }
 }
 
