Adicionado ReportFragment e suas dependencias. Adicionadas depencias dos gráficos que serão integrados.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,7 @@ dependencies {
     compile 'com.google.firebase:firebase-crash:9.4.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
+
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
 }
 apply plugin: 'com.google.gms.google-services'
