Adição de fragments para mostrar relatórios

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
+        <service
+            android:name=".network.services.ReportService"
+            android:enabled="false"
+            android:exported="false"></service>
 
         <activity
             android:name=".MainActivity"
