--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,5 +46,8 @@ dependencies {
 
     //graphs
     implementation 'com.github.PhilJay:MPAndroidChart:v2.2.4'
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0-alpha'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
 apply plugin: 'com.google.gms.google-services'
